# parview

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  default_config.toml  minimal.json  simple_palette.toml
exampleconfigs/: default_config.toml  minimal.json  other_config.toml
exampledata/: sphere packing.ipynb  spherocylinder packing.ipynb  spherocylinders.json
rustempty/: Makefile
src/: config.rs  lib.rs  main.rs  misc.rs  objects.rs  palette.rs  parviewer.rs  timer.rs
